@@ -2,6 +2,7 @@ package com.dxc.accountservice.configuration.swagger;
 
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.http.MediaType;
 import org.springframework.web.bind.annotation.RestController;
 import springfox.documentation.builders.PathSelectors;
 import springfox.documentation.builders.RequestHandlerSelectors;
@@ -12,6 +13,8 @@ import springfox.documentation.spring.web.plugins.Docket;
 import springfox.documentation.swagger2.annotations.EnableSwagger2;
 
 import java.util.Collections;
+import java.util.List;
+import java.util.Set;
 
 @Configuration
 @EnableSwagger2
@@ -24,7 +27,8 @@ public class SwaggerConfig {
                 .apis(RequestHandlerSelectors.basePackage("com.dxc.accountservice.controller.rest"))
                 .paths(PathSelectors.any())
                 .build()
-                .consumes(Collections.singleton("application/json"))
+                .consumes(Set.of(MediaType.APPLICATION_JSON_VALUE))
+                .produces(Set.of(MediaType.APPLICATION_JSON_VALUE, MediaType.APPLICATION_XML_VALUE))
                 .apiInfo(apiInfo());
 
     }
